[package]
name = "redrIDE"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
egui = "0.27"
tinyfiledialogs = "3.0"
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20"
tree-sitter-toml = "0.20"
